--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "^5.2.4",
     "csv-loader": "^3.0.3",
+    "html-webpack-plugin": "^5.3.1",
     "install": "^0.13.0",
     "json5": "^2.2.0",
     "npm": "^7.13.0",
