--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack",
+    "start": "webpack --watch",
     "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
@@ -15,9 +15,7 @@
     "css-loader": "^5.2.4",
     "csv-loader": "^3.0.3",
     "html-webpack-plugin": "^5.3.1",
-    "install": "^0.13.0",
     "json5": "^2.2.0",
-    "npm": "^7.13.0",
     "style-loader": "^2.0.0",
     "toml": "^3.0.0",
     "webpack": "^5.37.0",
