--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
     "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "toml": "^3.0.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
