--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,15 @@
   "devDependencies": {
     "css-loader": "^5.2.4",
     "csv-loader": "^3.0.3",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.1",
     "json5": "^2.2.0",
+    "nodemon": "^2.0.7",
     "style-loader": "^2.0.0",
     "toml": "^3.0.0",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
+    "webpack-dev-middleware": "^4.2.0",
     "webpack-dev-server": "^3.11.2",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
