--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack serve --open",
+    "start": "webpack --profile --json > stats.json",
     "build": "webpack --config webpack.config.js",
     "server": "nodemon server.js"
   },
